views: use the right color for unfocused treeview selection

The existing code incorrectly always uses TreeSelectedTextUnfocused,
even when the TreeView is focused. Oops.

Bug: 767778
Change-Id: I79cbb8628a607a10901cd744ab71e37ead85aa62
Reviewed-on: https://chromium-review.googlesource.com/703095
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507063}
Former-commit-id: 9a8273052346c3c3c8c8312bdde31ba8236470ef